--- a/Booker2/app/views/users/show.html.erb
+++ b/Booker2/app/views/users/show.html.erb
@@ -1,2 +1,34 @@
-<h1>画像をぶち込め</h1>
-<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg" %>
+<main>
+  <p id="notice"></p>
+  <div class="container px-5 px-sm-0">
+    <%= render 'layouts/sidebar', book: @book, user: @user %>
+  </div>
+  <div class="col-md-8 offset-md-1">
+    <h2>Books</h2>
+    <table class="table table-hover table-inverse">
+      <thread>
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to user_path(current_user.id) do %>
+                <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg" %>
+              <% end %>
+            </td>
+            <td>
+              <!-- %= @user.@book.title % コントローラーもいじろう -->
+            </td>
+            <td>
+              <!-- %= @user.@book.body % -->
+            </td>
+          </tr>
+        </tbody>
+      </thread>
+    </table>
+  </div>
+</main>
