--- a/Booker2/app/views/books/show.html.erb
+++ b/Booker2/app/views/books/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h1>title</h1>
+<%= @book.title %>
+<h1>body</h1>
+<%= @book.body %>
+<h1>id</h1>
+<%= @book.id %>
+<h1>user_id</h1>
+<%= @book.user_id %>
