--- a/Booker2/app/views/layouts/_sidebar.html.erb
+++ b/Booker2/app/views/layouts/_sidebar.html.erb
@@ -14,22 +14,23 @@
           <th><%= @user.introduction %></th>
         </tr>
       </tbody>
-
-      <div class="row">
-          <%= link_to edit_user_path do %>
-            <button class="btn btn-outline-secondary btn-block">
-              <i class="fas fa-user-cog"></i>
-            </button>
-          <% end %>
-      </div>
-        <h2 class="mt-3">New book</h2>
-        <%= form_with model:@book, local:true do |f| %>
-          <p>Title</p>
-          <% f.text_field :title %>
-          <p>Opinion</p>
-          <% f.text_area :body %>
-          <% f.submit 'Create Book', method: :create %>
-        <% end %>
     </table>
+
+    <%= link_to edit_user_path(current_user.id) do %>
+      <div class="row">
+        <button class="btn btn-outline-secondary btn-block">
+          <i class="fas fa-user-cog"></i>
+         </button>
+      </div>
+    <% end %>
+
+    <h2 class="mt-3">New book</h2>
+    <%= form_with model:@book, local:true do |f| %>
+      <p>Title</p>
+      <%= f.text_field :title %>
+      <p>Opinion</p>
+      <%= f.text_area :body %>
+      <%= f.submit 'Create Book', method: :create, class:"btn btn-success" %>
+    <% end %>
   </div>
 </div>
