--- a/Booker2/app/views/users/show.html.erb
+++ b/Booker2/app/views/users/show.html.erb
@@ -14,6 +14,7 @@
           <th colspan="3"></th>
         </tr>
         <tbody>
+          <% @books.each do |f| %>
           <tr>
             <td>
               <%= link_to user_path(current_user.id) do %>
@@ -21,12 +22,13 @@
               <% end %>
             </td>
             <td>
-              <!-- %= @user.@book.title % コントローラーもいじろう -->
+              <%= link_to f.title, book_path(f.id) %>
             </td>
             <td>
-              <!-- %= @user.@book.body % -->
+              <%= f.body %>
             </td>
           </tr>
+          <% end %>
         </tbody>
       </thread>
     </table>
