--- a/Booker2/app/views/users/show.html.erb
+++ b/Booker2/app/views/users/show.html.erb
@@ -1,36 +1,40 @@
 <main>
-  <p id="notice"></p>
   <div class="container px-5 px-sm-0">
-    <%= render 'layouts/sidebar', book: @book, user: @user %>
-  </div>
-  <div class="col-md-8 offset-md-1">
-    <h2>Books</h2>
-    <table class="table table-hover table-inverse">
-      <thread>
-        <tr>
-          <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
-          <th colspan="3"></th>
-        </tr>
-        <tbody>
-          <% @books.each do |f| %>
-          <tr>
-            <td>
-              <%= link_to user_path(current_user.id) do %>
-                <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg" %>
-              <% end %>
-            </td>
-            <td>
-              <%= link_to f.title, book_path(f.id) %>
-            </td>
-            <td>
-              <%= f.body %>
-            </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </thread>
-    </table>
+    <div class="row">
+      <div class="col-md-3">
+        <%= render 'layouts/sidebar', book: @book, user: @user %>
+      </div>
+        <div class="col-md-8 offset-md-1">
+          <h2>Books</h2>
+            <table class="table table-hover table-inverse">
+              <thread>
+                <tr>
+                  <th></th>
+                  <th>Title</th>
+                  <th>Opinion</th>
+                  <th colspan="3"></th>
+                </tr>
+
+                <tbody>
+                  <% @books.each do |f| %>
+                  <tr>
+                    <td>
+                      <%= link_to user_path(current_user.id) do %>
+                      <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg" %>
+                      <% end %>
+                    </td>
+                    <td>
+                      <%= link_to f.title, book_path(f.id) %>
+                    </td>
+                    <td>
+                      <%= f.body %>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </thread>
+          </table>
+      </div>
+    </div>
   </div>
 </main>
