--- a/Booker2/app/views/layouts/_sidebar.html.erb
+++ b/Booker2/app/views/layouts/_sidebar.html.erb
@@ -1,33 +1,40 @@
-<p id="notice"></p>
-    <h2>User Info</h2>
-    <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg" %>
-    <table class="table">
-      <tbody>
-        <tr></tr>
-        <tr>
-          <th>name</th>
-          <th><%= @user.name %></th>
-        </tr>
-        <tr>
-          <th>introduction</th>
-          <th><%= @user.introduction %></th>
-        </tr>
-      </tbody>
-    </table>
+<h2>User Info</h2>
+<%= attachment_image_tag @user, :profile_image, size:"100x100", fallback: "no_image.jpg" %>
+<table class="table">
+  <tbody>
+    <tr></tr>
+    <tr>
+      <th>name</th>
+      <th><%= @user.name %></th>
+    </tr>
+    <tr>
+      <th>introduction</th>
+      <th><%= @user.introduction %></th>
+    </tr>
+  </tbody>
+</table>
 
-    <%= link_to edit_user_path(current_user.id) do %>
-      <div class="row">
-        <button class="btn btn-outline-secondary btn-block">
-          <i class="fas fa-user-cog"></i>
-         </button>
-      </div>
-    <% end %>
+<% if @user.id == current_user.id %>
+  <%= link_to edit_user_path(current_user.id) do %>
+    <div class="row">
+      <button class="btn btn-outline-secondary btn-block">
+        <i class="fas fa-user-cog"></i>
+      </button>
+    </div>
+  <% end %>
+<% end %>
 
-    <h2 class="mt-3">New book</h2>
-    <%= form_with model:@book, local:true do |f| %>
-      <p>Title</p>
-      <%= f.text_field :title %>
-      <p>Opinion</p>
-      <%= f.text_area :body %>
-      <%= f.submit 'Create Book', method: :create, class:"btn btn-success" %>
-    <% end %>
+<h2 class="mt-3">New book</h2>
+<%= form_with model:@book, local:true do |f| %>
+<div class="form-group">
+  <p>Title</p>
+  <%= f.text_field :title, class:"form-control book_title" %>
+</div>
+<div class="form-group">
+  <p>Opinion</p>
+  <%= f.text_area :body, class:"form-control book_body" %>
+</div>
+<div class="form-group">
+  <%= f.submit 'Create Book', method: :create, class:"btn btn-success" %>
+</div>
+<% end %>
