--- a/Booker2/app/views/users/edit.html.erb
+++ b/Booker2/app/views/users/edit.html.erb
@@ -1,1 +1,27 @@
-<h1>ogyaw</h1>
+<main>
+  <p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <h2>User Info</h2>
+        <%= form_with model:@user, local:true do |f| %>
+          <div class="form-group">
+            <p>Name</p>
+            <%= f.text_field :name, class:"form-control user_name" %>
+          </div>
+          <div class="form-group">
+            <p>Image</p>
+            <%= f.attachment_field :profile_image, class:"form-control-file user_profile_image" %>
+          </div>
+          <div class="form-group">
+            <p>Introduction</p>
+            <%= f.text_area :introduction, class:"form-control user_introduction" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Update User', method: :update, class:"btn btn-secondary" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</main>
