--- a/Booker2/app/views/layouts/_sidebar.html.erb
+++ b/Booker2/app/views/layouts/_sidebar.html.erb
@@ -1,20 +1,20 @@
 <h2>User Info</h2>
-<%= attachment_image_tag @user, :profile_image, size:"100x100", fallback: "no_image.jpg" %>
+<%= attachment_image_tag user, :profile_image, size:"100x100", fallback: "no_image.jpg" %>
 <table class="table">
   <tbody>
     <tr></tr>
     <tr>
       <th>name</th>
-      <th><%= @user.name %></th>
+      <th><%= user.name %></th>
     </tr>
     <tr>
       <th>introduction</th>
-      <th><%= @user.introduction %></th>
+      <th><%= user.introduction %></th>
     </tr>
   </tbody>
 </table>
 
-<% if @user.id == current_user.id %>
+<% if user.id == current_user.id %>
   <%= link_to edit_user_path(current_user.id) do %>
     <div class="row">
       <button class="btn btn-outline-secondary btn-block">
@@ -25,16 +25,16 @@
 <% end %>
 
 <h2 class="mt-3">New book</h2>
-<%= form_with model:@book, local:true do |f| %>
+<%= form_with model:book, local:true do |f| %>
 <div class="form-group">
   <p>Title</p>
-  <%= f.text_field :title, class:"form-control book_title" %>
+  <%= f.text_field :title, value: nil, class:"form-control book_title" %>
 </div>
 <div class="form-group">
   <p>Opinion</p>
-  <%= f.text_area :body, class:"form-control book_body" %>
+  <%= f.text_area :body, value: nil, class:"form-control book_body" %>
 </div>
 <div class="form-group">
-  <%= f.submit 'Create Book', method: :create, class:"btn btn-success" %>
+  <%= f.submit 'Create Book', method: :post, class:"btn btn-success" %>
 </div>
 <% end %>
