--- a/Booker2/app/views/layouts/application.html.erb
+++ b/Booker2/app/views/layouts/application.html.erb
@@ -54,6 +54,7 @@
         </div>
       </nav>
     </header>
+    <%= render 'layouts/notifications' %>
     <%= yield %>
     <footer>
       <div class="container mt-5">
