--- a/Booker2/app/views/users/edit.html.erb
+++ b/Booker2/app/views/users/edit.html.erb
@@ -1,5 +1,4 @@
 <main>
-  <p id="notice"></p>
   <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
@@ -18,7 +17,7 @@
             <%= f.text_area :introduction, class:"form-control user_introduction" %>
           </div>
           <div class="form-group">
-            <%= f.submit 'Update User', method: :update, class:"btn btn-secondary" %>
+            <%= f.submit 'Update User', class:"btn btn-secondary" %>
           </div>
         <% end %>
       </div>
