--- a/Booker2/app/assets/stylesheets/application.scss
+++ b/Booker2/app/assets/stylesheets/application.scss
@@ -24,5 +24,16 @@
 }
 
 #notification{
- color:green;
+ color: green;
+}
+
+.error-message{
+ color: red;
+ margin: 8px 0px;
+}
+
+.error-table{
+ color: red;
+ margin-bottom: 16px;
+ padding-left: 40px;
 }
