--- a/Booker2/app/views/layouts/application.html.erb
+++ b/Booker2/app/views/layouts/application.html.erb
@@ -56,6 +56,7 @@
     </header>
     <main>
       <%= render partial: 'layouts/notifications' %>
+      <!--%= render partial: 'layouts/validation' %-->
       <%= yield %>
     </main>
     <footer>
