--- a/Booker2/app/views/layouts/application.html.erb
+++ b/Booker2/app/views/layouts/application.html.erb
@@ -54,9 +54,9 @@
         </div>
       </nav>
     </header>
+    &nbsp;
     <main>
       <%= render partial: 'layouts/notifications' %>
-      <!--%= render partial: 'layouts/validation' %-->
       <%= yield %>
     </main>
     <footer>
