--- a/Booker2/app/views/books/edit.html.erb
+++ b/Booker2/app/views/books/edit.html.erb
@@ -2,13 +2,14 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>Editing Book</h2>
+      <%= render partial: 'layouts/validation', locals: { model: @book } %>
       <%= form_with model:@book, local:true do |f| %>
         <div class="form-group">
-          <p>Title</p>
+          <label>Title</label>
           <%= f.text_field :title, class:"form-control book_title" %>
         </div>
         <div class="form-group">
-          <p>Opinion</p>
+          <label>Opinion</label>
           <%= f.text_area :body, class:"form-control book_body" %>
         </div>
         <div class="form-group">
