--- a/Booker2/app/views/layouts/_sidebar.html.erb
+++ b/Booker2/app/views/layouts/_sidebar.html.erb
@@ -14,24 +14,23 @@
   </tbody>
 </table>
 
-<% if user.id == current_user.id %>
-  <%= link_to edit_user_path(current_user.id) do %>
-    <div class="row">
-      <button class="btn btn-outline-secondary btn-block">
-        <i class="fas fa-user-cog"></i>
-      </button>
-    </div>
-  <% end %>
+<%= link_to edit_user_path(user.id) do %>
+  <div class="row">
+    <button class="btn btn-outline-secondary btn-block">
+      <i class="fas fa-user-cog"></i>
+    </button>
+  </div>
 <% end %>
+
 
 <h2 class="mt-3">New book</h2>
 <%= form_with model:book, local:true do |f| %>
 <div class="form-group">
-  <p>Title</p>
+  <label>Title</label>
   <%= f.text_field :title, value: nil, class:"form-control book_title" %>
 </div>
 <div class="form-group">
-  <p>Opinion</p>
+  <label>Opinion</label>
   <%= f.text_area :body, value: nil, class:"form-control book_body" %>
 </div>
 <div class="form-group">
