--- a/Booker2/app/views/users/edit.html.erb
+++ b/Booker2/app/views/users/edit.html.erb
@@ -2,17 +2,18 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User Info</h2>
+      <%= render partial: 'layouts/validation', locals: { model: @user } %>
       <%= form_with model:@user, local:true do |f| %>
         <div class="form-group">
-          <p>Name</p>
+          <label>Name</label>
           <%= f.text_field :name, class:"form-control user_name" %>
         </div>
         <div class="form-group">
-          <p>Image</p>
+          <label>Image</label>
           <%= f.attachment_field :profile_image, class:"form-control-file user_profile_image" %>
         </div>
         <div class="form-group">
-          <p>Introduction</p>
+          <label>Introduction</label>
           <%= f.text_area :introduction, class:"form-control user_introduction" %>
         </div>
         <div class="form-group">
