--- a/Booker2/app/views/users/index.html.erb
+++ b/Booker2/app/views/users/index.html.erb
@@ -1,7 +1,8 @@
+<%= render partial: 'layouts/validation', locals: { model: @user, model: @book } %>
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <%= render 'layouts/sidebar', book: @book, user: @user %>
+      <%= render partial: 'layouts/sidebar', locals: { book: @book, user: @user } %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
