--- a/Booker2/app/assets/stylesheets/application.scss
+++ b/Booker2/app/assets/stylesheets/application.scss
@@ -18,9 +18,11 @@
  @import 'font-awesome';
 
 *{
- margin: 0;
- padding: 0;
  box-sizing: border-box;
+}
+
+.actions, .field{
+ margin-bottom: 10px;
 }
 
 .form-text{
