--- a/Booker2/app/views/layouts/_notifications.html.erb
+++ b/Booker2/app/views/layouts/_notifications.html.erb
@@ -1,5 +1,5 @@
-<div id="notification">
+<p class="notice">
   <% flash.each do |key, value| %>
     <%= content_tag(:div, value, class: key) %>
   <% end %>
-</div>
+</p>
