--- a/Booker2/app/views/layouts/_sidebar.html.erb
+++ b/Booker2/app/views/layouts/_sidebar.html.erb
@@ -26,11 +26,11 @@
 <h2 class="mt-3">New book</h2>
 <%= form_with model:book, local:true do |f| %>
 <div class="form-group">
-  <label>Title</label>
+  <%= f.label :Title %>
   <%= f.text_field :title, value: nil, class:"form-control book_title" %>
 </div>
 <div class="form-group">
-  <label>Opinion</label>
+  <%= f.label :Opinion %>
   <%= f.text_area :body, value: nil, class:"form-control book_body" %>
 </div>
 <div class="form-group">
